Follow-up to https://github.com/google/google-java-format/commit/0a6a85e37f634fa870c920997d9270dca319cc03
See investigation in b/269345183

PiperOrigin-RevId: 509647966